# BeetRoot

./: CMakeLists.txt  README.md
arch/base/: CMakeLists.txt
arch/x86_64/: CMakeLists.txt
arch/x86_64/include/arch/: Types.hpp
arch/x86_64/include/arch/x86_64/: APIC.hpp  CPU.hpp  GDT.hpp  IDT.hpp  Interfaces.hpp  PIC.hpp  PIT.hpp  SystemPointer.hpp  XSDT.hpp
arch/x86_64/include/arch/x86_64/io/: IO.hpp  SerialPort.hpp
arch/x86_64/src/: CPU.cpp
cmake/: FindBeetRootBase.cmake
core/: CMakeLists.txt
core/include/core/: Heap.hpp  Logger.hpp  Task.hpp  TaskManager.hpp
core/src/: Heap.cpp  Logger.cpp
klib/base/: CMakeLists.txt
klib/base/include/klib/base/: Memory.hpp  String.hpp  Types.hpp  Vector.hpp
klib/base/src/: String.cpp  Vector.cpp
modules/x86_64/serial/: CMakeLists.txt
modules/x86_64/serial/include/serial/: SerialLogger.hpp
modules/x86_64/serial/src/: SerialLogger.cpp
tests/SimpleKernel/: CMakeLists.txt
tests/SimpleKernel/src/: SimpleKernel.cpp
