cmake_minimum_required(VERSION 3.24)
project(BeetRoot LANGUAGES CXX VERSION 0.1.0)
include(cmake/FindBeetRootBase.cmake)
set(ARCH x86_64)
add_subdirectory(arch/base)
add_subdirectory(arch/${ARCH})
add_subdirectory(klib/base)
add_subdirectory(core)
add_subdirectory(modules/${ARCH}/serial)
add_subdirectory(tests/SimpleKernel)